Bay27 is deactivated

--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -2133,14 +2133,14 @@
   </title>
 </rect>
 
-<rect id="lab27" stroke-width="0.5"  x="963" y="407" height="37" width="54" fill="white">
+<!-- <rect id="lab27" stroke-width="0.5"  x="963" y="407" height="37" width="54" fill="white">
   <title>
     Tool Name:{{_labListed27.Tool_Name}}
     Category: {{_labListed27.Tool_Category}}
     Utillization: {{_labListed27.Productive | number:'1.2-2'}}%
     Threshold: {{_labListed27.Tool_Threshold}}%
   </title>
-</rect>
+</rect> -->
 
 <rect id="lab31" stroke-width="0.5"  x="963" y="370" height="37" width="55" fill="white">
   <title>
