--- a/src/app/bayhome/bayhome.component.html
+++ b/src/app/bayhome/bayhome.component.html
@@ -1694,11 +1694,11 @@
    <rect stroke="null" stroke-width="1" fill="white" width="50" height="41" y="432" x="719" id="bay30" (click)="setId(30)" filter="url(#f1)"/>
    <rect stroke="null" stroke-width="1" fill="white" width="25" height="40" y="374" x="669" id="bay4" (click)="setId(4)" filter="url(#f1)"/>
    <!-- <rect id="bay2" (click)="setId(129)" x="669" y="285" height="48" width="25" fill="white" filter="url(#f1)"></rect>-->
-   <rect id="bay2" stroke-width="1" (click)="setId(3)" x="669" y="285" height="48" width="25" fill ="0000006e" filter="url(#f1)"></rect>
+   <rect id="bay2" stroke-width="1" (click)="setId(3)" x="669" y="285" height="48" width="25" fill="white" filter="url(#f1)"></rect>
 
 
-   <rect stroke="null" fill ="0000006e" stroke-width="1" width="46" height="30" y="285" x="945" id="bay6B"  (click)="setId('6B')" filter="url(#f1)"></rect>
-   <rect stroke="null" fill ="0000006e" stroke-width="1" width="46" height="30" y="285" x="991" id="bay6C"   (click)="setId('6C')" filter="url(#f1)"></rect>
+   <rect stroke="null" fill="white" stroke-width="1" width="46" height="30" y="285" x="945" id="bay6B"  (click)="setId('6B')" filter="url(#f1)"></rect>
+   <rect stroke="null" fill="white" stroke-width="1" width="46" height="30" y="285" x="991" id="bay6C"   (click)="setId('6C')" filter="url(#f1)"></rect>
    <rect stroke="null" fill="white" stroke-width="1" width="92" height="30" y="311" x="945" id="bay6A"  (click)="setId('6A')"  filter="url(#f1)" ></rect>
 
 
