--- a/src/app/categorytable/categorytable.component.html
+++ b/src/app/categorytable/categorytable.component.html
@@ -40,6 +40,13 @@
           name="search" placeholder="Search.."
             [(ngModel)]="term">
     </div>
+    <div class="row" style="margin-top: 10px">
+      <div class="col-lg-offset-11 col-md-offset-11 col-sm-offset-11">
+      <a type="button" id="export" class="btn myButton2"
+       href="http://152.135.122.61:8871/api/export_toolcategory_xls"
+        target="_self" download="status.pdf" style="background: seagreen;">Export Excel</a>
+      </div>
+  </div>
 <div>
 
 </div>
