Tool number changes

--- a/src/app/bayhome/bayhome.component.html
+++ b/src/app/bayhome/bayhome.component.html
@@ -1637,7 +1637,7 @@
    <rect width="45" height="42" y="536" x="649" stroke-width="1" id="bay8" (click)="setId(8)"/>
    <rect width="75" height="75" y="496" x="852" stroke-width="1" id="bay24" (click)="setId(24)"/>
    <rect id="bay32"  stroke-width="1" x="979" y="363" height="37" width="27" (click)="setId(32)"></rect>
-   <rect fill="white" width="25" height="37" y="363" x="952" stroke-width="1" id="bay33"/>
+   <rect fill="white" width="25" height="37" y="363" x="952" stroke-width="1" (click)="setId(33)" id="bay33"/>
    <rect fill="white" width="25" height="45" y="414" x="670" stroke-width="1" id="bay5"></rect>
    <!-- <rect stroke="null" fill="white" width="25" height="38" y="335" x="669" id="bay3" (click)="setId(65)" filter="url(#f1)"/> -->
 
