--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -1872,14 +1872,14 @@
   </title>
 </rect>
 
-<!-- <rect id="lab21" stroke-width="0.5" x="727" y="565" height="55" width="35" fill="white">
+<rect id="lab21" stroke-width="0.5" x="727" y="565" height="55" width="35" fill="white">
   <title>
     Tool Name:{{_labListed21.Tool_Name}}
     Category: {{_labListed21.Tool_Category}}
-    Utillization: {{_labListed21.Productive | number:'1.2-2'}}%
+    Utillization:{{_labListed21.Productive | number:'1.2-2'}}%
     Threshold: {{_labListed21.Tool_Threshold}}%
   </title>
-</rect> -->
+</rect> 
 <rect id="lab22" stroke-width="0.5" x="727" y="465" height="95" width="35" fill="white">
   <title>
     Tool Name:{{_labListed22.Tool_Name}}
@@ -2038,13 +2038,13 @@
     Threshold: {{_labListed32.Tool_Threshold}}%
   </title>
 </rect> 
-
-<!-- 
+ 
 <rect id="lab33" x="963" y="333" height="37" stroke-width="0.5" width="25" fill="white">
   <title >Tool Name:{{_labListed33.Tool_Name}}
     Category: {{_labListed33.Tool_Category}}
     Utillization: {{_labListed33.Productive | number:'1.2-2'}}%
-    Threshold: {{_labListed33.Tool_Threshold}}%</title></rect> -->
+    Threshold: {{_labListed33.Tool_Threshold}}%</title>
+  </rect>
   
 
 <!-- 
@@ -2133,14 +2133,14 @@
   </title>
 </rect>
 
-<!-- <rect id="lab27" stroke-width="0.5"  x="963" y="407" height="37" width="54" fill="white">
+<rect id="lab27" stroke-width="0.5"  x="963" y="407" height="37" width="54" fill="white">
   <title>
     Tool Name:{{_labListed27.Tool_Name}}
     Category: {{_labListed27.Tool_Category}}
     Utillization: {{_labListed27.Productive | number:'1.2-2'}}%
     Threshold: {{_labListed27.Tool_Threshold}}%
   </title>
-</rect> -->
+</rect>
 
 <rect id="lab31" stroke-width="0.5"  x="963" y="370" height="37" width="55" fill="white">
   <title>
