--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -1785,7 +1785,8 @@
 <g clip-path="url(#clipId1)" fill="rgb(0,0,0)" stroke="rgb(0,0,0)" stroke-width="0">
 <line x1="412" y1="480" x2="480" y2="480" style="stroke:black;stroke-width:1" />
 <line x1="448" y1="480" x2="448" y2="550" style="stroke:black;stroke-width:1"></line>
-<!-- <rect id="lab39a" stroke-width="0.5" ng-click="setId(44)" x="412" y="480" height="70" width="35" fill="white">
+
+<rect id="lab39a" stroke-width="0.5" ng-click="setId(44)" x="412" y="480" height="70" width="35" fill="white">
   <title>
       Tool Name:{{_labListed39a.Tool_Name}}
       Category: {{_labListed39a.Tool_Category}}
@@ -1793,14 +1794,15 @@
       Threshold: {{_labListed39a.Tool_Threshold}}%
     </title>
 </rect>
-<rect id="lab39b" stroke-width="0.5" x="450" y="480" height="70" width="35" fill="white">
+
+<!-- <rect id="lab39b" stroke-width="0.5" x="450" y="480" height="70" width="35" fill="white">
   <title>
       Tool Name:{{_labListed39b.Tool_Name}}
       Category: {{_labListed39b.Tool_Category}}
       Utillization: {{_labListed39b.Productive | number:'1.2-2'}}%
       Threshold: {{_labListed39b.Tool_Threshold}}%
     </title>
-</rect> -->
+</rect>  -->
 <text transform="matrix(5.7905 0 -0 5.7905 441.522 477.697)" font-family="Arial,'sans-serif'" font-size="1.39636">Storage</text>
 <text transform="matrix(5.7905 0 -0 5.7905 492.231 477.697)" font-family="Arial,'sans-serif'" font-size="1.39636">Storage</text>
 <text transform="matrix(2.89525 0 -0 2.89525 489.121 639.188)" font-family="Arial,'sans-serif'" font-size="1.39636">Vacuum</text>
