bay17 in deactivated

--- a/src/app/bayhome/bayhome.component.html
+++ b/src/app/bayhome/bayhome.component.html
@@ -1608,7 +1608,7 @@
    <rect width="90" height="65" stroke-width="1" y="519" x="291" id="bay41" (click)="setId(41)"/>
    <rect width="75" height="65" y="449" x="177" stroke-width="1" id="bay43" (click)="setId(43)"/>
    <rect width="77" height="22" y="661" x="499" stroke-width="1" id="bay16" (click)="setId(16)"/>
-   <rect width="35" height="22" y="661" x="579" stroke-width="1" id="bay17" (click)="setId(17)"/>
+   <rect fill="white" width="35" height="22" y="661" x="579" stroke-width="1" id="bay17" (click)="setId(17)"/>
    <rect fill="white" width="43" height="22" y="661" x="617" stroke-width="1" id="bay18" (click)="setId(18)"/>
    <rect width="51" height="22" y="661" x="664" stroke-width="1" id="bay19" (click)="setId(19)"/>
    <rect width="35" height="30" y="651" x="716" stroke-width="1" id="bay20" (click)="setId(20)"/>
