group button in user table

--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -29,6 +29,10 @@ color: snow;
 
 }
 
+/* New group background */
+
+/* .modal-backdrop {background: none;} */
+
 
 .fulltable{
     margin-top: 20px;
