--- a/src/app/dashboardhome/dashboardhome.component.css
+++ b/src/app/dashboardhome/dashboardhome.component.css
@@ -166,7 +166,7 @@ table .ng-enter.ng-enter-active {
 }
 
 .bays div {
-           background: #c14141e6;
+           background: #23527C;
    color: white;
    width: 125px;
    height: 99px;
@@ -198,7 +198,7 @@ table .ng-enter.ng-enter-active {
 
 
 .nullbays div {
-    background: #c14141e6;
+    background: #23527C;
 color: white;
 width: 125px;
 height: 99px;
@@ -303,13 +303,13 @@ margin-top: 42px;
     }
 
     .bays {
-        background: #008000fc;
+        background: skyblue;
         font-family: Bree Serif;
         width: 250px;
     }
 
     .nullbays{
-        background: #008000fc;
+        background: skyblue;
         font-family: Bree Serif;
         width: 265px;
         overflow-y: scroll;
