removed splited bay39

--- a/src/app/bayhome/bayhome.component.html
+++ b/src/app/bayhome/bayhome.component.html
@@ -1588,14 +1588,14 @@
    <polyline stroke="null" id="svg_1267" points="421.510009765625,514.0440063476562 525.3770141601562,514.0440063476562 "/>
   </g>
   <g stroke="rgb(0,0,0)" id="svg_1268" stroke-width="0" fill="rgb(0,0,0)" clip-path="url(#clipId1)">
-    <rect fill="none" width="35" height="60" y="525" x="402" stroke-width="1" id="bay39A" (click)="setId('39A')"/>
-    <rect fill="none" stroke-width="1" id="bay39B"(click)="setId('39B')" x="438" y="525" height="60" width="35"></rect>
+    <rect fill="none" width="71" height="60" y="525" x="402" stroke-width="1" id="bay39" (click)="setId('39')"/>
+    <!-- <rect fill="none" stroke-width="1" id="bay39B"(click)="setId('39B')" x="438" y="525" height="60" width="35"></rect> -->
     <text stroke="null" x="15.542699" y="49.218547" id="svg_1269" font-size="1.39636" font-family="Arial,'sans-serif'" transform="matrix(5.790500000000001,0,0,5.790500000000001,340.522,224.69700000000003) ">Storage</text>
    <text stroke="null" x="15.542699" y="49.218547" id="svg_1270" font-size="1.39636" font-family="Arial,'sans-serif'" transform="matrix(5.790500000000001,0,0,5.790500000000001,391.231,224.69700000000003) ">Storage</text>
    <text stroke="null" x="31.085399" y="98.437095" id="svg_1271" font-size="1.39636" font-family="Arial,'sans-serif'" transform="matrix(2.8952500000000003,0,0,2.8952500000000003,388.12100000000004,386.188) ">Vacuum</text>
    <text stroke="null" x="31.085399" y="98.437095" id="svg_1272" font-size="1.39636" font-family="Arial,'sans-serif'" transform="matrix(2.8952500000000003,0,0,2.8952500000000003,387.95300000000003,392.02700000000004) ">System</text>
-   <text stroke="null" x="15.542699" y="49.218547" id="svg_1273" font-size="1.4" font-family="Arial,'sans-serif'" transform="matrix(5.790500000000001,0,0,5.790500000000001,314.365,272.551) ">Bay-39a</text>
-   <text stroke="null" x="21.542699" y="49.218547" id="svg_1273" font-size="1.4" font-family="Arial,'sans-serif'" transform="matrix(5.790500000000001,0,0,5.790500000000001,314.365,272.551) ">Bay-39b</text>
+   <text stroke="null" x="18.542699" y="49.218547" id="svg_1273" font-size="2" font-family="Arial,'sans-serif'" transform="matrix(5.790500000000001,0,0,5.790500000000001,314.365,272.551) ">Bay-39</text>
+   <!-- <text stroke="null" x="21.542699" y="49.218547" id="svg_1273" font-size="1.4" font-family="Arial,'sans-serif'" transform="matrix(5.790500000000001,0,0,5.790500000000001,314.365,272.551) ">Bay-39b</text> -->
 
   </g>
   <g stroke="rgb(255,0,0)" id="svg_1274" stroke-width="0.25" fill="none" clip-path="url(#clipId1)">
