--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -1714,20 +1714,20 @@
       </rect>
     
       <rect id="lab47" stroke-width="0.5" x="320" y="329" height="26" width="30" fill="white">
-          <title >Tool Name:{{_labListed47.Tool_Name}}
+          <!-- <title >Tool Name:{{_labListed47.Tool_Name}}
             Category: {{_labListed47.Tool_Category}}
             Utillization: {{_labListed47.Productive | number:'1.2-2'}}%
             Threshold: {{_labListed47.Tool_Threshold}}%
-          </title>
+          </title> -->
         </rect>
       
           
       <rect id="lab48"  stroke-width="0.5" x="320" y="356" height="26" width="30" fill="white">
-          <title >Tool Name:{{_labListed48.Tool_Name}}
+          <!-- <title >Tool Name:{{_labListed48.Tool_Name}}
             Category: {{_labListed48.Tool_Category}}
             Utillization: {{_labListed48.Productive | number:'1.2-2'}}%
             Threshold: {{_labListed48.Tool_Threshold}}%
-          </title>
+          </title> -->
         </rect>
     
         <rect id="lab49"  stroke-width="0.5" x="320" y="383" height="26" width="30" fill="white">
