--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -1784,7 +1784,7 @@
 </g>
 <g clip-path="url(#clipId1)" fill="rgb(0,0,0)" stroke="rgb(0,0,0)" stroke-width="0">
 <line x1="412" y1="480" x2="480" y2="480" style="stroke:black;stroke-width:1" />
-<line x1="448" y1="480" x2="448" y2="550" style="stroke:black;stroke-width:1"></line>
+<line x1="448" y1="480" x2="448" y2="550"></line>
 
 <rect id="lab39" stroke-width="0.5" ng-click="setId(114)" x="412" y="480" height="70" width="71" fill="white">
   <title>
