bay20 is disabled

--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -1865,14 +1865,14 @@
   </title>
 </rect>
 
-<rect id="lab20" x="727" y="622" height="30" width="35" fill="white">
+<!-- <rect id="lab20" x="727" y="622" height="30" width="35" fill="white">
   <title >
     Tool Name:{{_labListed20.Tool_Name}}
     Category: {{_labListed20.Tool_Category}}
     Utillization: {{_labListed20.Productive | number:'1.2-2'}}%
     Threshold: {{_labListed20.Tool_Threshold}}%
   </title>
-</rect>
+</rect> -->
 
 <rect id="lab21" stroke-width="0.5" x="727" y="565" height="55" width="35" fill="white">
   <title>
