removed bay_start time

--- a/src/app/categorytable/categorytable.component.html
+++ b/src/app/categorytable/categorytable.component.html
@@ -66,7 +66,7 @@
             <th [class]="order === 'Tfirst_name'"
             (click)="setOrder('Tfirst_name')">Tool Owner <span [hidden]="reverse">▼</span
               ><span [hidden]="!reverse">▲</span></th>
-            <th [class]="order ==='Qend_date'">Bay Start Date</th>
+           <!-- <th [class]="order ==='Qend_date'">Bay Start Date</th> -->
             <th [class]="order === 'Tool_Category'"
             (click)="setOrder('Tool_Category')">Tool Category <span [hidden]="reverse">▼</span
               ><span [hidden]="!reverse">▲</span></th>
