--- a/src/app/toolcatagory/toolcatagory.component.html
+++ b/src/app/toolcatagory/toolcatagory.component.html
@@ -1841,14 +1841,14 @@
   </title>
 </rect>
 
-<rect id="lab17" stroke-width="0.5" x="590" y="630" height="20" width="35" fill="white">
+<!-- <rect id="lab17" stroke-width="0.5" x="590" y="630" height="20" width="35" fill="white">
   <title>
     Tool Name:{{_labListed17.Tool_Name}}
     Category: {{_labListed17.Tool_Category}}
     Utillization: {{_labListed17.Productive | number:'1.2-2'}}%
     Threshold: {{_labListed17.Tool_Threshold}}%
   </title>
-</rect>
+</rect> -->
 
 <!-- <rect id="lab18" stroke-width="0.5" x="628" y="630" height="20" width="43" fill="white">
   <title>
